[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passgen-llm"
version = "2025.12.21181318"
description = "A new package that takes user-provided text input (such as event details, membership information, or coupon data) and uses an LLM to generate structured, formatted pass content for Apple Wallet. It en"
readme = "README.md"
authors = [{ name = "passgen-llm", email = "hi@eugene.plus" }]
requires-python = ">=3.9"
dependencies = [
  "langchain-llm7>=0.0.0",
  "llmatch-messages>=0.0.0",
  "langchain-core>=0.3.0",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/chigwell/passgen-llm"
